infra/aws/manifests/prow-namespace.yaml


# Define the namespace

apiVersion: v1
kind: Namespace
metadata:
  name: prow
  annotations:
    linkerd.io/inject: enabled
