infra/aws/manifests/verify-conformance.yaml
# Copyright 2022 CNCF
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: verify-conformance-release
  namespace: prow
  labels:
    app: verify-conformance-release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verify-conformance-release
  template:
    metadata:
      labels:
        app: verify-conformance-release
    spec:
      terminationGracePeriodSeconds: 180
      containers:
        - name: verify-conformance-release
          image: 928655657136.dkr.ecr.ap-southeast-2.amazonaws.com/verify-conformance-release@sha256:a941c3de0da82d079d98ce12e351c99eb6d88bfd570e1d5a7f587d672b7f8ad1
          imagePullPolicy: IfNotPresent
          args:
            - --github-endpoint=http://prow-ghproxy
            - --github-endpoint=https://api.github.com
            - --dry-run=false
            - --hmac-secret-file=/etc/webhook/hmac
            - --plugin-config=/plugin/vcr.yaml
            - --update-period=5m
            - --github-app-id=$(GITHUB_APP_ID)
            - --github-app-private-key-path=/etc/github/cert
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
            - name: hmac
              mountPath: /etc/webhook
              readOnly: true
            - name: oauth
              mountPath: /etc/github
              readOnly: true
            - name: plugins
              mountPath: /etc/plugins
              readOnly: true
            - name: vcr-config
              mountPath: /plugin/vcr.yaml
              subPath: vcr.yaml
              readOnly: true
      volumes:
        - name: hmac
          secret:
            secretName: hmac-token
        - name: oauth
          secret:
            secretName: github-token
        - name: plugins
          configMap:
            name: plugins
        - name: vcr-config
          configMap:
            name: vcr-config
